adding RDB persistence and TTL methods